...
  "yes": "Yes",
  "no": "No ",
  "home": "Home",
  "learn": "Learn",
  "editor": "Editor",
  "account": "Account",
  "ok": "OK",
  "for_everyone": "For everyone",
  "for_experts": "For experts",
  "one_hour_less": "1 hour or less",
  "one_two_hours": "1-2 hours",
  "two_three_hours": "2-3 hours",
  "three_hours_more": "3 hours or more",
...
  "editor_chapter_name_hint": "Enter the chapter name here",
  "editor_chapter_description_hint": "Enter the chapter description here",
  "editor_section_name_hint": "Enter the section name here",
  "add_chapter": "Add Chapter",
  "add_section": "Add Section",
  "add_block": "Add Block",
  "text_block": "Text Block",
  "multimedia_block": "Multimedia Block",
  "quiz_block": "Quiz Block",
  "save_changes": "Save Changes",
  "chapters_header": "Chapters",
  "sections_header": "Sections",
  "blocks_header": "Blocks",
  "edit_course_page_no_chapters": "This course has no chapters yet. Create one now!",
  "edit_chapter_page_no_sections": "This chapter has no sections yet. Create one now!",
...
  "enroll_in": "Enroll in Course",
  "unsubscribe": "Unsubscribe",
  "by": "by ",
  "reviews": "Reviews",
  "no_reviews_yet": "There are no reviews yet.",
  "block": "Block",
  "text": "Text",
  "multimedia": "Multimedia",
  "quiz": "Quiz",
  "multimedia_video": "Multimedia: Video",
  "multimedia_image": "Multimedia: Image",
  "multimedia_audio": "Multimedia: Audio",
  "multimedia_video_short": "Video",
  "multimedia_image_short": "Image",
  "multimedia_audio_short": "Audio",
  "quiz_multiple_choice": "Quiz: Multiple choice",
  "quiz_open_question": "Quiz: Open question",
  "quiz_multiple_choice_short": "Multiple choice",
  "quiz_open_question_short": "Open question",
  "write_text_here": "Write your text here",
  "preview": "Preview",
  "choose_multimedia_type": "Choose the multimedia type",
  "choose_quiz_type": "Choose the quiz type",
  "upload_audio": "Upload an audio",
  "upload_image": "Upload an image",
...
